# yazi

./: .gitignore  CMakeLists.txt
.github/workflows/: build_and_test.yml
application/test/: hello_test.cpp
src/: hello_world_app.cpp
